--- a/index.html
+++ b/index.html
@@ -197,27 +197,37 @@
                         <a href="./assets/CRUD.mp4" class="video-button">Vídeo</a>
                     </div>
                     <div class="project__card e__commerce">
-                        <img src="./assets/proyecto-2.png" alt="">
+                        <img src="./assets/login.png" alt="">
                         <div class="overlay"></div>
                         <div
                             class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
-                            <h2>Travel Tours</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quae obcaecati amet
+                            <h2>Registro y Login de Usuarios</h2>
+                            <p>Sistema de autentificación de usuarios con su respectivo registro, fue creado con PHP nativo,
+                              HTML5, Bootstrap, JavaScript y MySQL. 
                             </p>
                             <span><i class="fa-solid fa-arrow-right-long"></i></span>
                         </div>
+                    </div>
+                    <div class="project-buttons flex justify-content-center gap-3 mt-4">
+                        <a href="https://github.com/VelosoN97/LOGIN_REGISTRO_PHP" class="repo-button">Repositorio</a>
+                        <a href="./assets/Login - Opera.mp4" class="video-button">Vídeo</a>
                     </div>
                     <div class="project__card tours__Web">
-                        <img src="./assets/proyecto-3.png" alt="">
+                        <img src="./assets/crud-jugadores.png" alt="">
                         <div class="overlay"></div>
-                        <div
-                            class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
-                            <h2>Travel Tours</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quae obcaecati amet
+                        <div class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
+                            <h2>Gestión de Jugadores</h2>
+                            <p>Sistema orientado a la gestión de jugadores de fútbol, con la diferencia de que se probó
+                                el manejo de modales para la interacción del formulario, dichos registros se crearon con 
+                                Laravel, HTML5, Bootstrap, JavaScript, AJAX y MySQL.
                             </p>
                             <span><i class="fa-solid fa-arrow-right-long"></i></span>
-                        </div>
+                        </div>   
                     </div>
+                    <div class="project-buttons flex justify-content-center gap-3 mt-4">
+                        <a href="https://github.com/VelosoN97/CRUD_LARAVEL_BOOTSTRAP_MODAL_AJAX" class="repo-button">Repositorio</a>
+                        <a href="./assets/Laravel - Opera.mp4" class="video-button">Vídeo</a>
+                    </div> 
                     <div class="project__card gym">
                         <img src="./assets/proyecto-4.jpeg" alt="">
                         <div class="overlay"></div>
