--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
             </div>
             <div class="header__info flex align-items-center gap-3">
                 <ul class="flex flex-column xl:flex-row list-none">
-                    <li onclick="scrollToSection('about')">Sobre mí</li>
                     <li onclick="scrollToSection('services')">Servicios</li>
                     <li onclick="scrollToSection('portfolio')">Portafolio</li>
                     <li onclick="scrollToSection('contact')">Contacto</li>
                 </ul>
                 <div class="hireMe__button pt-4">
                     <a href="https://wa.me/56974586478" aria-label="Enviar mensaje al correo"
-                        class="cursor-pointer no-underline border-round-lg text-xl xl:text-sm">Contáctame</a>
+                        class="cursor-pointer no-underline border-round-lg text-xl xl:text-sm">Háblame</a>
                 </div>
             </div>
         </nav>
@@ -229,38 +228,76 @@
                         <a href="./assets/Laravel - Opera.mp4" class="video-button">Vídeo</a>
                     </div> 
                     <div class="project__card gym">
-                        <img src="./assets/proyecto-4.jpeg" alt="">
+                        <img src="./assets/crud-empleados.png" alt="">
                         <div class="overlay"></div>
                         <div
                             class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
-                            <h2>Travel Tours</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quae obcaecati amet
+                            <h2>Gestión de Empleados</h2>
+                            <p>Sistema focalizado a la gestión y administración de empleados, integrando la funcionalidad de modales
+                                para el formulario de registro, y la inserción del SweetAlert como modo de validación al momento de
+                                ingresar, modificar y eliminar datos. Dicho sistema fue elaborado en Laravel, HTML5, Bootstrap, JavaScript,
+                                AJAX y MySQL.
                             </p>
                             <span><i class="fa-solid fa-arrow-right-long"></i></span>
                         </div>
+                    </div>
+                    <div class="project-buttons flex justify-content-center gap-3 mt-4">
+                        <a href="https://github.com/VelosoN97/CRUD_EMPLEADOS_SWEETALERT_AJAX" class="repo-button">Repositorio</a>
+                        <a href="./assets/CRUD Empleados - Opera.mp4" class="video-button">Vídeo</a>
                     </div>
                     <div class="project__card world__Tours">
-                        <img src="./assets/proyecto-5.jpg" alt="">
+                        <img src="./assets/login-angular.png" alt="">
                         <div class="overlay"></div>
                         <div
                             class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
-                            <h2>Travel Tours</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quae obcaecati amet
+                            <h2>Sistema de Registro y Login de Usuarios en Angular</h2>
+                            <p>Sistema de autentificación y registro de usuarios que puede servir para numerosos proyectos,
+                                teniendo la diferencia que fue creado y dividido tanto por el lado del servidor como por el lado del
+                                cliente (backend y frontend). Dicho sistema fue creado en Laravel (backend), Angular (frontend), HTML5,
+                                CSS3, Bootstrap, JavaScript y MySQL.
                             </p>
                             <span><i class="fa-solid fa-arrow-right-long"></i></span>
                         </div>
+                    </div>
+                    <div class="project-buttons flex justify-content-center gap-3 mt-4">
+                        <a href="https://github.com/VelosoN97/Proyecto-Laravel-Angular-Backend" class="repo-button">Repositorio Backend</a>
+                        <a href="https://github.com/VelosoN97/VelosoN97-Proyecto-Laravel-Angular-Frontend" class="repo-button">Repositorio Frontend</a>
+                        <a href="./assets/AutentificacionDeUsuariosLaravelAngularFrontend.mp4" class="video-button">Vídeo</a>
                     </div>
                     <div class="project__card tours__Web">
-                        <img src="./assets/proyecto-6.webp" alt="">
+                        <img src="./assets/crud-gastos.png" alt="">
                         <div class="overlay"></div>
                         <div
                             class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
-                            <h2>Travel Tours</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quae obcaecati amet
+                            <h2>Gestión y Listado de Gastos</h2>
+                            <p>Sistema orientado a la gestión y administración de gastos, se encuentra dividido tanto por
+                                el lado del servidor como por el lado del cliente (backend y frontend), dicho sistema fue creado
+                                en Laravel, Angular, HTML5, CSS3, Bootstrap, JavaScript y MySQL.
                             </p>
                             <span><i class="fa-solid fa-arrow-right-long"></i></span>
                         </div>
                     </div>
+                    <div class="project-buttons flex justify-content-center gap-3 mt-4">
+                        <a href="https://github.com/VelosoN97/CRUD-Gastos-Laravel-Angular-Backend" class="repo-button">Repositorio Backend</a>
+                        <a href="https://github.com/VelosoN97/CRUD-Gastos-Laravel-Angular-Frontend" class="repo-button">Repositorio Frontend</a>
+                        <a href="./assets/CRUDGastosLaravelAngularFrontend - Opera.mp4" class="video-button">Vídeo</a>
+                    </div>
+                    <div class="project__card tours__Web">
+                        <img src="./assets/chatbot.png" alt="">
+                        <div class="overlay"></div>
+                        <div class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
+                            <h2>Chatbot con API de Geminis</h2>
+                            <p>Sistema orientado a la comunicación directa con un entorno de inteligencia artificial, teniendo
+                                conexión con la API que otorga Geminis en su sitio. Dicho sistema fue creado con PHP nativo, Geminis API,
+                                JavaScript, HTML5 y CSS3.
+                            </p>
+                            <span><i class="fa-solid fa-arrow-right-long"></i></span>
+                        </div>   
+                    </div>
+                    <div class="project-buttons flex justify-content-center gap-3 mt-4">
+                        <a href="https://github.com/VelosoN97/Chatbot-PHP-API-Geminis" class="repo-button">Repositorio</a>
+                        <a href="./assets/Chatbot - Opera.mp4" class="video-button">Vídeo</a>
+                    </div> 
                 </div>
             </div>
         </section>
