--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 </div>
                 <h1 class="text-3xl sm:text-5xl md:text-7xl">Nicolás Veloso</h1>
                 <p class="text-gray-500">
-                    Soy un profesional titulado en Ingeniería en Informática con formación integral en lo que respecta
-                   desarrollo web, desarrollo de software, conocimientos en base de datos, soporte informático, seguridad
-                   y redes. Mi próposito principal es unirme a una organización, con el fin de poder aplicar mis habilidades
-                   técnicas en base a lo aprendido, y por supuesto, seguir aprendiendo y especializándome en este sistema de 
-                   desarrollo contribuyendo con soluciones óptimas e innovadoras. 
+                    Profesional titulado en Ingeniería en Informática con formación integral en lo que respecta a 
+                    desarrollo web, desarrollo de software, conocimientos en base de datos, soporte informático, 
+                    seguridad y redes. Uno de los própositos principales es ser parte de una organización, con el fin
+                    de poder aplicar las habilidades técnicas en base a lo aprendido y seguir especializándome en este 
+                    entorno de desarrollo, contribuyendo así con soluciones óptimas e innovadoras.
                 </p>
                 <div class="home__buttons flex align-items-center gap-2 mt-6">
                     <a href="./assets/CV - Nicolas Veloso - Ingeniero en Informatica.pdf" aria-label="Descargar curriculum"
@@ -87,9 +87,10 @@
             <div class="services__title flex flex-column gap-3 text-center">
                 <h1 class="text-3xl md:text-5xl">Mis servicios</h1>
                 <p class="text-gray-400 text-sm md:text-base">
-                    A lo largo de mi experiencia, he interactuado con varios lenguajes, frameworks, hipertextos de programación, pero los 
-                    que se encuentran a continuación, son los que más he utilizado de forma constante y con amplio conocimientos 
-                    en su entorno.
+                    A lo largo de la trayectoria, se ha interactuado con diversos lenguajes, frameworks e 
+                    hipertextos de programación. Sin embargo, los que se mencionan a continuación son aquellos 
+                    que se ha utilizado de manera constante y en los cuales se posee un amplio conocimiento de 
+                    su entorno.
                 </p>
             </div>
             <div class="services__card w-full grid grid-nogutter mt-7 gap-5">
@@ -165,10 +166,10 @@
             <div class="portfolio__title flex flex-column gap-3 text-center">
                 <h1 class="text-3xl md:text-5xl">Mis trabajos</h1>
                 <p class="text-gray-400 text-sm md:text-base">
-                    En base a mi experiencia que ha sido en lo educativo, en lo laboral y en lo personal, he tenido 
-                    múltiples desarrollos de sistema, pero a continuación, les dejo lo último que he realizado en el 
-                    último tiempo, donde sigo ampliando mis conocimientos en mi área, con aprendizaje constante y dedicación
-                    persistente. 
+                    En base a la experiencia que he tenido en los años de formación, tanto laboral como personalmente, he tenido 
+                    múltiples desarrollos de sistemas, a continuación, podrán evidenciar los últimos proyectos en los que he trabajado
+                    de forma independiente, permitiendo así ampliar los conocimientos en el área, con aprendizaje constante y dedicación 
+                    persistente en lo que conlleva esta labor. 
                 </p>
             </div>
             <div class="portfolio__gallery">
@@ -271,8 +272,9 @@
                             class="project__info flex w-full flex-column justify-content-center align-items-center text-center">
                             <h2>Gestión y Listado de Gastos</h2>
                             <p>Sistema orientado a la gestión y administración de gastos, se encuentra dividido tanto por
-                                el lado del servidor como por el lado del cliente (backend y frontend), dicho sistema fue creado
-                                en Laravel, Angular, HTML5, CSS3, Bootstrap, JavaScript y MySQL.
+                                el lado del servidor como por el lado del cliente (backend y frontend), aquí se probó el modelo
+                                factory que posee laravel para el llenado de datos, dicho sistema fue creado en Laravel, Angular, 
+                                HTML5, CSS3, Bootstrap, JavaScript y MySQL.
                             </p>
                             <span><i class="fa-solid fa-arrow-right-long"></i></span>
                         </div>
