--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     entorno de desarrollo, contribuyendo así con soluciones óptimas e innovadoras.
                 </p>
                 <div class="home__buttons flex align-items-center gap-2 mt-6">
-                    <a href="./assets/CV - Nicolas Veloso - Ingeniero en Informatica.pdf" aria-label="Descargar curriculum"
+                    <a href="./assets/CV - Nicolas Veloso - Ingeniero en Informatica (2) (2).pdf" aria-label="Descargar curriculum"
                         class="cursor-pointer border-round-lg no-underline" download>Descargar CV</a>
                     <button onclick="scrollToSection('portfolio')" aria-label="Deslizar a sección portafolio para mostrar mis trabajos"
                         class="cursor-pointer border-round-lg">Mi trabajo</button>
